--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Assignment-08 Animation</title>
     <style>
         body{
-            background-color: #2e3136;
+            background-color: black;
             overflow: hidden;
         }
         main{
